--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h2>¡Te has registrado con éxito!</h2>
       </div>
       <div class="register-form-container w-100 text-center m-auto">
-        <h2 class="mb-3">Registrate Aquí</h2>
+        <h2 class="mb-3">¿Quieres afiliarte?</h2>
         <div class="col-11 col-lg-8  m-auto " id="liveAlertPlaceholder"></div>
 
         <form id="quotation-form" class="form-register d-flex flex-column align-items-center justify-content-between m-auto">
