--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <input type="text" class="form-control" placeholder="04241234567" name="phoneNumber" id="phoneNumber">
             </div>
           </div>
-          <input class="btn-register" type="submit" value="Registrar">
+          <input class="btn-register" type="submit" value="Quiero ">
         </form>
       </div>
 
