--- a/index.html
+++ b/index.html
@@ -193,11 +193,25 @@
           <div class="plan-image-container position-relative">
             <!-- <img src="/assets/img/plan-4.jpg" alt="plan image"> -->
             <div class="overlay-secondary"></div>
-            <h3>Plan <br> Total Senior</h3>
+            <h3>Plan <br> Salud Senior</h3>
           </div>
           <p class="text-secondary mb-0">Cobertura</p>
           <p class="plan-price">
             $15.000
+          </p>
+          <!-- <p class="monthly-price">
+            COSTO<br>MENSUAL $75
+          </p> -->
+        </div>
+        <div id="plan-5" class="plan plan-5 d-flex flex-column align-items-center justify-content-between">
+          <div class="plan-image-container position-relative">
+            <!-- <img src="/assets/img/plan-5.jpg" alt="plan image"> -->
+            <div class="overlay-secondary"></div>
+            <h3>Plan <br> Escolar</h3>
+          </div>
+          <p class="text-secondary mb-0">Cobertura</p>
+          <p class="plan-price">
+            $5.000
           </p>
           <!-- <p class="monthly-price">
             COSTO<br>MENSUAL $75
@@ -1188,6 +1202,73 @@
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
           <div class="modal-link-container">
             <a href="https://api.whatsapp.com/send?phone=584246098372&text=Buenas%2C%20quisiera%20saber%20m%C3%A1s%20informaci%C3%B3n%20del%20plan%20Total%20Senior." target="_blank" type="button" class="btn btn-primary d-flex flex-row justify-content-center align-items-center modal-link">Obtener más información <img src="./assets/img/open-window.svg" alt="open window"></a>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal modal-plan fade" id="modal-plan-5" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-scrollable">
+      <div class="modal-content">
+        <div class="modal-header">
+          <div class="text-center w-100 d-flex flex-column align-items-center">
+            <h5 class="modal-title" id="exampleModalLabel">PLAN ESCOLAR</h5>
+            <P class="modal-price">$5.000</P>
+            <p class="modal-rules">Todos nuestros servicios cuentan con cobertura inmediata 100%</p>
+            <p class="text-secondary w-100 text-center scroll-text">
+              Desliza para ver todos nuestros servicios
+            </p>
+          </div>
+
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body ">
+
+          <ul class="modal-list list-dotted">
+            <li class=" modal-list-item d-flex flex-row justify-content-start align-items-center">
+              <img src="./assets/img/APROBADO-LOGO.png" alt="">
+              <div class="d-flex flex-row justify-content-between w-100 position-relative align-items-center">
+                <p>Emergencias ambulatorias</p>
+
+              </div>
+
+            </li>
+            <li class=" modal-list-item d-flex flex-row justify-content-start align-items-center">
+              <img src="./assets/img/APROBADO-LOGO.png" alt="">
+              <div class="d-flex flex-row justify-content-between w-100 position-relative align-items-center">
+                <p>Cirugías de emergencia por accidente</p>
+
+              </div>
+
+            </li>
+            <li class=" modal-list-item d-flex flex-row justify-content-start align-items-center">
+              <img src="./assets/img/APROBADO-LOGO.png" alt="">
+              <div class="d-flex flex-row justify-content-between w-100 position-relative align-items-center">
+                <p>Cirugía reconstructiva por accidente</p>
+
+              </div>
+
+            </li>
+            <li class=" modal-list-item d-flex flex-row justify-content-start align-items-center">
+              <img src="./assets/img/APROBADO-LOGO.png" alt="">
+              <div class="d-flex flex-row justify-content-between w-100 position-relative align-items-center">
+                <p>Servicio de ambulancia</p>
+
+              </div>
+
+            </li>
+          </ul>
+
+        </div>
+        <p class="text-secondary modal-monthly w-100 text-center pt-2">
+          Costo mensual: $75
+        </p>
+        <div class="modal-footer ">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+          <div class="modal-link-container">
+            <a href="https://api.whatsapp.com/send?phone=584246098372&text=Buenas%2C%20quisiera%20saber%20m%C3%A1s%20informaci%C3%B3n%20del%20plan%20Escolar." target="_blank" type="button" class="btn btn-primary d-flex flex-row justify-content-center align-items-center modal-link">Obtener más información <img src="./assets/img/open-window.svg" alt="open window"></a>
           </div>
 
         </div>
