update plan escolar

--- a/index.html
+++ b/index.html
@@ -1304,7 +1304,7 @@
 
         </div>
         <p class="text-secondary modal-monthly w-100 text-center pt-2">
-          Costo mensual: $75
+          Costo anual: $12
         </p>
         <div class="modal-footer ">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
